ルーティング：rootページ設定

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,4 +9,7 @@
     = stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
   %body
+    %header(style="height: 100px; text-align: center;")
+      - if user_signed_in?
+        = link_to 'ログアウト', destroy_user_session_path, method: :delete
     = yield
