users#showの大枠作成

--- a/app/views/public/users/show.html.haml
+++ b/app/views/public/users/show.html.haml
@@ -1,1 +1,47 @@
-%h1 showページ
+// 隠れて見えないのでmt-5してます
+%div.container-fluid
+  %div.row.text-center(style="height: 15vh;")
+    // マイページ上部
+    %div.col.col-2.border.bg-secondary
+      LOGO
+    %div.col.border.bg-secondary
+      ルーム名
+    %div.col.col-2.border.bg-secondary
+      // ルーム作成ボタン
+      // = link_to 'ルーム作成', rooms_path, method: :post, class: "btn btn-info"
+      = form_with model: Room.new, url: rooms_path do |f|
+        = f.hidden_field :name, :value => "name"
+        = f.submit 'ルーム作成'
+
+      // userボタン
+
+      // configボタン
+
+      // ログアウトボタン
+      - if user_signed_in?
+        = link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "btn btn-info"
+  %div.row.bg-secondary(style="height: 85vh;")
+    // 下の
+    %div.col.col-2.borde
+      %ul.nav.nav-tabs(id="myTab" role="tablist")
+        %li.nav-item
+          %a.nav-link.active(id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true")
+            ルーム
+        %li.nav-item
+          %a.nav-link(id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false")
+            フレンド
+      %div.tab-content(id="myTabContent")
+        // 左のサイドバー
+        %div.tab-pane.fade.show.active(id="home" role="tabpanel" aria-labelledby="home-tab")
+          // ルーム一覧
+          - @rooms.each do |room|
+            = room.name
+        %div.tab-pane.fade(id="profile" role="tabpanel" aria-labelledby="profile-tab")
+          // フレンド一覧
+          - @users.each do |user|
+            = user.name
+
+    %div.col.border
+      // チャット画面など
+      チャット画面
+
