ログイン画面、新規登録画面、招待状

--- a/app/views/public/registrations/new.html.haml
+++ b/app/views/public/registrations/new.html.haml
@@ -1,30 +1,37 @@
-%h2 Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = render "public/shared/error_messages", resource: resource
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: "new-password"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .field
-    名前
-    \#{f.text_field :name}
-  .field
-    ニックネーム
-    \#{f.text_field :nickname}
-  .field
-    電話番号
-    \#{f.text_field :phone_number}
-  .actions
-    = f.submit "Sign up"
-= render "public/shared/links"
+.container-fluid
+  .row
+    .col.text-center.my-5
+      // サイトタイトル
+      %h1 Razzle Chat
+  .row
+    .col.col-5.text-center.mx-auto
+      %h2
+        新規登録
+        <i class="fas fa-user-plus"></i>
+      = form_with model: resource, url: user_registration_path, id: 'new_user', class: 'new_user was-validated', local: true do |f|
+        = render "public/shared/error_messages", resource: resource
+        .field.mt-5
+          = f.email_field :email, autofocus: true, class: "form-control", id: "validationTextarea", placeholder: "メールアドレス", required: true
+          .invalid-feedback メールアドレスを入力してください。
+        .field.mt-3
+          = f.password_field :password, class: "form-control", id: "validationTextarea", placeholder: "パスワード", required: true
+          .invalid-feedback
+            パスワードを入力してください。
+            - if @minimum_password_length
+              %em
+                (#{@minimum_password_length} characters minimum)
+        .field.mt-3
+          = f.password_field :password_confirmation, class: "form-control", id: "validationTextarea", placeholder: "パスワード(確認用)", required: true
+          .invalid-feedback 確認のため同じパスワードを入力してください。
+        .field.mt-3
+          = f.text_field :name, class: "form-control", id: "validationTextarea", placeholder: "お名前", required: true
+          .invalid-feedback お名前を入力してください。
+        .field.mt-3
+          = f.text_field :nickname, class: "form-control", id: "validationTextarea", placeholder: "ニックネーム", required: true
+          .invalid-feedback ニックネームを入力してください。
+        .field.mt-3
+          = f.number_field :phone_number, class: "form-control", id: "validationTextarea", placeholder: "電話番号", required: true
+          .invalid-feedback 電話番号を入力してください。
+        .actions.my-3
+          = f.submit "新規登録", class: "btn btn-success"
+      = render "public/shared/links"
