Add_room切り替え、フレンドの検索、一覧

--- a/app/views/public/users/show.html.haml
+++ b/app/views/public/users/show.html.haml
@@ -34,14 +34,21 @@
         .tab-pane.fade.show.active(id="rooms" role="tabpanel" aria-labelledby="rooms-tab")
           // ルーム一覧
           - @rooms.each do |room|
-            = room.name
+            = link_to room.name, root_path(room_id: room.id)
             - entry = room.entries.find_by(user_id: current_user)
             - if entry.entry_status == false
               = link_to '参加する', entry_path(entry.id), method: :patch
             %br
         .tab-pane.fade.list-group(id="friends" role="tabpanel" aria-labelledby="friends-tab")
           // フレンド一覧
-          // 下記暫定的な書き方
+          = form_with url: root_path, method: :get do |f|
+            = f.select :range, options_for_select( { '名前' => 'Name', 'ニックネーム' => 'Nickname', 'ID' => 'ID'  }, 'Name')
+            = f.search_field :word
+            = f.submit "検索", id: "user_list"
+          = link_to "リセット", root_path, method: :get
+          // ユーザー一覧の部分テンプレート呼び出し
+          // #user_lists
+          //   = render "user_list", users: @users
           - @users.each do |user|
             = link_to user.name, entries_path(params: { entry: { user_id: user.id, room_id: 1 } }), method: :post, class: "list-group-item list-group-item-action"
             - if current_user.following?(user)
@@ -53,23 +60,25 @@
       // チャット画面など
       // 下記暫定的な書き方
       チャット画面(仮)
-      - room = Room.find(1)
-      .container
-        .row
-          - room.users.each do |user|
-            - if user.id == room.owner_id
-              .col
-                = user.name
-                - user.messages.each do |message|
-                  = message.message
-            - else
-              .col
-                = user.name
-                - user.messages.each do |message|
-                  = message.message
-        .row
-          = form_with model: Message.new, url: messages_path, method: :post do |f|
-            = f.text_area :message
-            = f.hidden_field :room_id, :value => 1
-            = f.submit "送信"
+      // - room = Room.find(1)
+      - if @room.present?
+        = @room.name
+        .container
+          .row
+            - @room.users.each do |user|
+              - if user.id == @room.owner_id
+                .col
+                  = user.name
+                  - user.messages.each do |message|
+                    = message.message
+              - else
+                .col
+                  = user.name
+                  - user.messages.each do |message|
+                    = message.message
+          .row
+            = form_with model: Message.new, url: messages_path, method: :post do |f|
+              = f.text_area :message
+              = f.hidden_field :room_id, :value => 1
+              = f.submit "送信"
 
