[Update]タブ切り替えif動作チェック完了,タブクリック動作なし

--- a/app/views/public/users/show.html.haml
+++ b/app/views/public/users/show.html.haml
@@ -24,7 +24,7 @@
     .col.col-2
       %ul.nav.nav-tabs(id="myTab" role="tablist")
         %li.nav-item
-          %a.nav-link(id="rooms-tab" data-toggle="tab" href="#rooms" role="tab" aria-controls="rooms" aria-selected="true")
+          %a.nav-link.active(id="rooms-tab" data-toggle="tab" href="#rooms" role="tab" aria-controls="rooms" aria-selected="true")
             ルーム
         %li.nav-item
           %a.nav-link(id="friends-tab" data-toggle="tab" href="#friends" role="tab" aria-controls="friends" aria-selected="false")
