--- a/app/views/public/users/show.html.haml
+++ b/app/views/public/users/show.html.haml
@@ -1,4 +1,9 @@
 .container-fluid
+  .test(style="position: absolute; height: 100vh; text-align: center; width: 100vw;")
+    #modal.d-none
+      // ルーム作成ボタン
+      // 仮のルーム作成ボタンです
+      = render "public/rooms/create_room"
   .row.text-center(style="height: 15vh;")
     // マイページ上部
     .col.col-2.border.bg-secondary
@@ -6,11 +11,8 @@
     .col.border.bg-secondary
       ルーム名
     .col.col-2.border.bg-secondary
-      // ルーム作成ボタン
-      // 仮のルーム作成ボタンです
-      = form_with model: Room.new, url: rooms_path do |f|
-        = f.hidden_field :name, :value => "name"
-        = f.submit 'ルーム作成(仮)', class: "btn btn-info"
+      .room_create_btn.btn.btn-info
+        ルーム作成
 
       // userボタン
 
@@ -34,8 +36,8 @@
         .tab-pane.fade.show.active(id="rooms" role="tabpanel" aria-labelledby="rooms-tab")
           // ルーム一覧
           - @rooms.each do |room|
-            %p{"data-tablinks" => "off"} 
-              = link_to room.name, root_path(room_id: room.id)
+            %p{"data-tablinks" => "off"}
+              = link_to room.name, root_path(room_id: room.id), data: { 'turbolinks': false }
             - entry = room.entries.find_by(user_id: current_user)
             - if entry.entry_status == false
               = link_to '参加する', entry_path(entry.id), method: :patch
@@ -88,10 +90,10 @@
   window.onload = () => {
     let rooms = document.getElementById("rooms-tab");
     let friends = document.getElementById("friends-tab");
-    
+
     let changeActive = 1;
     let myActive = localStorage.getItem("changeActive");
-    
+
     // ページ読み込み時に発火
     // changeActiveの内容で、タブが切り替わる
     rooms.addEventListener("click", () => {
@@ -99,18 +101,23 @@
       localStorage.setItem("changeActive", changeActive);
       rooms.click();
     });
-    
+
     friends.addEventListener("click", () => {
       changeActive = 2;
       localStorage.setItem("changeActive", changeActive);
       friends.click();
     });
-    
+
     if (myActive == 1) {
       rooms.click();
     } else if (myActive == 2){
       friends.click();
     } else {
-  
+
     };
+    let room_create_btn = document.querySelectorAll(".room_create_btn")[0];
+    room_create_btn.addEventListener('click', () => {
+      document.getElementById("modal").classList.toggle("d-none");
+    });
   };
+
