複数招待対応 未参加時メッセージを送れないように

--- a/app/views/public/users/show.html.haml
+++ b/app/views/public/users/show.html.haml
@@ -81,7 +81,7 @@
           //   = render "user_list", users: @users
           - @users.each do |user|
             = user.name
-            
+
             - if current_user.following?(user)
               = link_to "フォローを外す", users_relationships_path(params: {user_id: user.id}), method: :delete
             - else
@@ -99,7 +99,7 @@
           .text-center
             .btn.btn-sm.btn-success.my-1{"data-target" => "#modalRoomEntry", "data-toggle" => "modal", type: "button" }
               ルームへ招待<i class="fas fa-plus"></i>
-              
+
           // モーダルでルーム作成フォームを表示する記述
           #modalRoomEntry.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "modalRoomEntryTitle", role: "dialog", tabindex: "-1"}
             .modal-dialog{role: "document"}
@@ -110,17 +110,21 @@
                     %button.close{"aria-label" => "Close", "data-dismiss" => "modal", type: "button"}
                       %span{"aria-hidden" => "true"} ×
                   .modal-body.text-left(style="word-wrap: break-word;")
-                    - @users.each do |user|
-                      //-  if @room.users.where.not(id: user.id).exists?
-                      - unless @room.users.any?{|room_user| room_user == user}
-                        = link_to user.name, entries_path(params: { entry: { user_id: user.id, room_id: @room.id } }), method: :post, class: "list-group-item list-group-item-action"
+                    = form_with model: Entry.new, url: create_all_path, method: :post do |f|
+                      - count = 0
+                      - @users.each do |user|
+                        - unless @room.users.any?{|room_user| room_user == user}
+                          = f.hidden_field :room_id, :value => @room.id
+                          = check_box_tag "user_ids[]", user.id
+                          = user.name
+                          - count += 1
+                      - if count == 0
+                        = "招待を送れるユーザーがいません"
+                      - else
+                        = submit_tag "送信"
 
-                  //  = form_with model: Entry.new, url: entries_path, method: :post do |f|
-                  //    = f.hidden_field :user_id, :value => user.id
-                  //    = f.select 
-                      
           //= link_to user.name, entries_path(params: { entry: { user_id: user.id, room_id: @room.id } }), method: :post, class: "list-group-item list-group-item-action"
-            
+
           // ルーム編集ボタン
           .btn.btn-sm.btn-success.my-1{"data-target" => "#modalRoomEdit", "data-toggle" => "modal", type: "button"}
             ルームを編集する<i class="fas fa-edit"></i>
@@ -154,10 +158,14 @@
                   = message.message
                 .col
           .row
-            = form_with model: Message.new, url: messages_path, method: :post do |f|
-              = f.text_area :message
-              = f.hidden_field :room_id, :value => @room.id
-              = f.submit "送信"
+            - if Entry.find_by(room_id: @room.id, user_id: current_user.id).entry_status == true
+              = form_with model: Message.new, url: messages_path, method: :post do |f|
+                = f.text_area :message
+                = f.hidden_field :room_id, :value => @room.id
+                = f.submit "送信"
+            - else
+              = "参加してメッセージを投稿しましょう"
+
       - else
         %h1 ルーム未選択です
 
