--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,4 +11,12 @@
     
 
   %body
+    - if flash[:notice]
+      .alert.alert-success(role="alert")
+        <i class="fas fa-check-circle mr-2"></i>
+        = notice
+    - if flash[:alert]
+      .alert.alert-danger.mb-0(role="alert")
+        <i class="fas fa-check-circle mr-2"></i>
+        = alert
     = yield
